--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,70 @@
-body {
-    background-color: black;
+$test: 1px dashed red;
+$box: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px;
+$boxinset: inset rgba(0, 0, 0, 0.4) 0px 2px 4px, inset rgba(0, 0, 0, 0.3) 0px 7px 13px -3px;
+
+*{box-sizing: border-box};
+
+body, h1, h2, h3, h4, p, ul, ol, li, p {
+    margin: 0;
+    padding: 0;
+} button {
+    appearance: none;
 }
+
+body {
+    background-image: url('../photos/mountains.jpg');
+    background-size: cover;
+    overflow: hidden;
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.wrapper {
+    width: 1000px;
+    height: 750px;
+    background-image: url(../assets/fake-brick.png);
+    background-color: rgba(0,0,0,0.5);
+    backdrop-filter: blur(5px);
+    box-shadow: inset 0 0 100px rgba(0, 0, 0, 0.75), $box;
+    display: flex;
+    flex-direction: row;
+} .sidebar {
+    height: 100%;
+    width: calc(30%);
+    ul {
+        list-style: none;
+        li {
+            color: white;
+            border: $test;
+        }
+    }
+} .main {
+    width: calc(100%);
+    height: 100%;
+    padding: 20px;
+}
+
+#content {
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.375);
+    padding: 20px;
+    box-shadow: $boxinset;
+}
+
+.card {
+    border: $test;
+    min-width: 100px;
+    min-height: 100px;
+}
+
+// .test {
+//     border-radius: 5px;
+//     width: 190px;
+//     height: 254px;
+//     background: rgb(233, 233, 233);
+//     box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+// }
