--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -27,8 +27,7 @@ body, h1, h2, h3, h4, p, ul, ol, li, p {
 }
 
 body {
-    background-image: url('../photos/mountains.jpg');
-    background-size: cover;
+    background-image: url('../assets/debut_dark.jpg');
     overflow: hidden;
     width: 100vw;
     height: 100vh;
@@ -40,10 +39,6 @@ body {
 .wrapper {
     width: 1000px;
     height: 750px;
-    background-image: url(../assets/fake-brick.png);
-    background-color: rgba(0,0,0,0.5);
-    backdrop-filter: blur(5px);
-    box-shadow: inset 0 0 100px rgba(0, 0, 0, 0.75), $box;
     display: flex;
     flex-direction: row;
     color: white;
@@ -56,9 +51,9 @@ body {
     width: calc(100% - 20px);
     height: calc(100% - 40px);
     margin: 20px;
-    background-color: rgba(0,0,0,0.375);
+    background-color: rgba(0,0,0,0.25);
     padding: 20px;
-    box-shadow: $boxinset;
+    box-shadow: 0 1px 0 rgba(255,255,255,0.15), 0 1px 5px rgba(0,0,0,0.75) inset, 0 0 100px rgba(0,0,0,0.15) inset;
 }
 
 ///////////// SIDEBAR!
@@ -67,8 +62,8 @@ body {
     > div {
         padding: 10px;
         &:hover {
-            background-color: rgba(0,0,0,0.5);
-            box-shadow: $boxinset;
+            background-color: rgba(0,0,0,0.25);
+            border-radius: 5px;
             cursor: pointer;
         }
         p {
@@ -117,7 +112,7 @@ body {
         font-family: 'Roboto', $fallback;
         margin-bottom: 10px;
         small {
-            font-weight: bold;
+            font-style: italic;
         }
     }
 }
@@ -144,12 +139,60 @@ body {
 
 .tasks {
     list-style: none;
+    margin-bottom: 5px;
     li {
-        margin-top: 5px;
-    } input {
-        margin: 0;
-    } label {
-        font-family: 'Roboto', $fallback;
-        margin-left: 5px;
+        margin-top: 10px;
+        display: flex;
+        flex-direction: row;
+        align-items: start;
+        > div {
+            font-family: 'Roboto', $fallback;
+            margin-left: 10px;
+            margin-top: 3px;
+        }
+    }
+    label {
+        position: relative;
+        font-size: 20px;
+        user-select: none;
+        input {
+            
+            position: absolute;
+            opacity: 0;
+            height: 0;
+            width: 0;
+            &:checked ~ div {
+                box-shadow: inset 2px 2px 4px #c5c5c5, inset -2px -2px 4px white;
+            } &:checked ~ div::after {
+                opacity: 1;
+            }
+        }
+        div {
+            cursor: pointer;
+            position: relative;
+            // top: 0;
+            // left: 0;
+            height: 25px;
+            width: 25px;
+            background-color: #ccc;
+            border-radius: 100%;
+            background: #e8e8e8;
+            box-shadow: 2px 2px 4px #c5c5c5, -2px -2px 4px white;
+            &::after {
+                content: "";
+                position: absolute;
+                opacity: 0;
+                left: 9px;
+                top: 5px;
+                width: 5px;
+                height: 10px;
+                border: solid gray;
+                border-width: 0 0.15em 0.15em 0;
+                transform: rotate(45deg);
+            }
+            &:hover::after {
+                opacity: 0.25;
+            }
+        }
     }
 }
