--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -162,7 +162,7 @@ body {
             height: 0;
             width: 0;
             &:checked ~ div {
-                box-shadow: inset 2px 2px 4px #c5c5c5, inset -2px -2px 4px white;
+                box-shadow: inset 2px 2px 4px rgba(0,0,0,0.25), inset -2px -2px 4px white;
             } &:checked ~ div::after {
                 opacity: 1;
             }
@@ -174,10 +174,9 @@ body {
             // left: 0;
             height: 25px;
             width: 25px;
-            background-color: #ccc;
             border-radius: 100%;
-            background: #e8e8e8;
-            box-shadow: 2px 2px 4px #c5c5c5, -2px -2px 4px white;
+            background: transparent;
+            box-shadow: 2px 2px 4px rgba(0,0,0,0.25), -2px -2px 4px white;
             &::after {
                 content: "";
                 position: absolute;
