--- a/src/style.scss
+++ b/src/style.scss
@@ -1,3 +1,54 @@
+$test: 1px dashed red;
+
 * {
     box-sizing: border-box;
+}
+
+body {
+    overflow: hidden;
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+aside, main {
+    height: 650px;
+    padding: 20px;
+} aside {
+    padding-right: 0;
+    width: 250px;
+} main {
+    width: 750px;
+} 
+
+#projects, #todos {
+    border: $test;
+} #projects {
+    
+} #todos {
+    height: 100%;
+    overflow-y: auto;
+}
+
+.project {
+
+}
+
+.todo {
+
+}
+
+.tasklist {
+    
+}
+
+.card {
+    // logic for a todo that is in card view
+}
+
+.expanded {
+    // logic for a todo that is in expanded view
 }
