--- a/src/style.scss
+++ b/src/style.scss
@@ -43,100 +43,44 @@ aside, main {
     gap: 15px;
 } #todos {
     height: 100%;
-    
-    // display: grid;
-    // grid-template-columns: repeat(3, 1fr);
-    // gap: 15px;
-    &::after {
-        content: '';
-        display: block;
-        clear: both;
-    } 
-    
-    // overflow-y: auto;
-    // -ms-overflow-style: none;
-    // scrollbar-width: none;
-    // &::-webkit-scrollbar {
-    //     display: none;
-    // }
-
     overflow: hidden;
     &:hover {
         overflow-y: auto;
     }
 }
 
-.project {
-    border: 1px solid gray;
-    h2 {
-        font-weight: normal;
-        &:hover {
-            cursor: pointer;
-        }
-    } div {
-        display: none;
-        small:first-of-type {
-            font-weight: bold;
-            &::after {
-                content: ' / ';
-            }  
-        }
-    }
-} .project.active div {
-    display: block;
+.splash {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .todo {
-    max-width: 100%;
-    border: 1px solid lightgray;
-    margin-top: 20px;
-    margin-bottom: 20px;
-    margin-right: 20px;
-    p {
-        margin-bottom: 10px;
+    border: $test;
+    position: relative;
+    .close, .edit {
+        position: absolute;
+        top: 0;
+        right: 0;
     }
 }
 
-.tasklist {
-    
-}
-
-.task {
-    display: flex;
-    flex-direction: row;
-    align-items: start;
-    margin-bottom: 5px;
-}
-
-
-
-.card {
-    h2 {
-        &:hover {
-            cursor: pointer;
+.task-list {
+    li {
+        div {
+            display: inline-block;
         }
-    } 
+    }
 }
 
-.expand {
-    height: calc(100% - 40px);
-    // logic for a todo that is in expanded view
-}
-
-.priority {
-    border: $test;
-    padding: 10px;
-}
-
-.low, .medium, .high, .none {
-    background-color: gray;
-    width: fit-content;
-} .low::after {
-    content: 'low';
-} .medium::after {
-    content: 'medium';
-} .high::after {
-    content: 'high';
-} .none::after {
-    content: 'no priority';
+.project {
+    h3 {
+        cursor: pointer;
+    }
+    small:first-child::after {
+        content: ' / ';
+    }
 }
